# stock_web_flask

./: .gitignore  pyproject.toml
mkdocs/docs/: main.md
stock_web/app/: app_main.py  home.py
stock_web/app/templates/: base.html  data.html  home.html
web/: main.py
