[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Bo Tang <tb_ldxx@126.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
mkdocs = "^1.1.2"
Flask-Bootstrap = "^3.3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
